# galg

./: .gitignore  Cargo.toml
frontbin/: Cargo.toml
frontbin/src/: main.rs  render.rs
galg/: Cargo.toml
galg/fuzz/: Cargo.toml
galg/fuzz/fuzz_targets/: tg1.rs  tg2.rs  tg3.rs
galg/src/: infin.rs  lib.rs  macros.rs  matrix.rs  plusalg.rs  subset.rs  test.rs  variable.rs
src/: main.rs  subset.rs
