[package]
name = "galg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
arbitrary = "1.3.2"
derive_more = "0.99.17"
lazy_static = "1.4"
nalgebra = "0.32.3"
num-dual = "0.8.1"
num-traits = "0.2.18"
simba = "0.8.1"

[dependencies.pyo3]
version = "0.20"
