[package]
name = "galg-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.galg]
path = ".."

[[bin]]
name = "tg1"
path = "fuzz_targets/tg1.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tg2"
path = "fuzz_targets/tg2.rs"
test = false
doc = false
bench = false

[[bin]]
name = "tg3"
path = "fuzz_targets/tg3.rs"
test = false
doc = false
bench = false